--- a/hyprland.conf
+++ b/hyprland.conf
@@ -159,6 +159,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, Print, exec, grim -g "$(slurp -d)"
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
